--- a/app/src/main/res/menu/main_menu.xml
+++ b/app/src/main/res/menu/main_menu.xml
@@ -6,4 +6,14 @@
         android:icon="@android:drawable/ic_menu_add"
         android:title="Add Task"
         app:showAsAction="always" />
+
+
+    <it.neokree.materialtabs.MaterialTabHost
+        android:id="@+id/materialTabHost"
+        android:layout_width="match_parent"
+        android:layout_height="48dp"
+        app:textColor="#FFFFFF"
+        app:primaryColor="@color/colorPrimary"
+        app:accentColor="@color/colorAccent" />
+
 </menu>
