Toolbar finished, still have to implement it dynamically depending on the multiple user's categories.

--- a/app/src/main/res/layout/toolbar.xml
+++ b/app/src/main/res/layout/toolbar.xml
@@ -4,4 +4,5 @@
     android:minHeight="?attr/actionBarSize"
     android:background="?attr/colorPrimary"
     android:id="@+id/toolbar"
-    xmlns:android="http://schemas.android.com/apk/res/android" />
+    xmlns:android="http://schemas.android.com/apk/res/android"
+    />
