--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -3,6 +3,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
     android:paddingBottom="@dimen/activity_vertical_margin"
     android:paddingLeft="@dimen/activity_horizontal_margin"
     android:paddingRight="@dimen/activity_horizontal_margin"
@@ -19,6 +20,8 @@
         android:layout_height="wrap_content"
         android:background="@color/colorPrimary"
         android:layout_below="@+id/tool_bar"
+        app:tabGravity="fill"
+        app:tabMode="scrollable"
         android:layout_alignParentLeft="true"
         android:layout_alignParentStart="true" />
 
@@ -26,17 +29,17 @@
         android:id="@+id/viewpager"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:layout_below="@+id/tabs"
-        />
+        android:layout_below="@+id/tabs">
 
-    <TextView
-        android:layout_height="wrap_content"
-        android:text="To do List"
-        android:gravity="center_vertical|center_horizontal"
-        android:layout_width="fill_parent" />
-    <ListView
-        android:id="@+id/ListViewTasks"
-        android:layout_height="wrap_content"
-        android:layout_width="fill_parent"/>
+        <!--<ListView-->
+            <!--android:id="@+id/ListViewTasks"-->
+            <!--android:layout_height="wrap_content"-->
+            <!--android:layout_width="fill_parent"-->
+            <!--android:layout_alignTop="@+id/viewpager"-->
+            <!--android:layout_alignParentStart="true"-->
+            <!--android:layout_marginTop="30dp" />-->
+
+    </android.support.v4.view.ViewPager>
+
 
 </RelativeLayout>
