--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -4,10 +4,6 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     xmlns:app="http://schemas.android.com/apk/res-auto"
-    android:paddingBottom="@dimen/activity_vertical_margin"
-    android:paddingLeft="@dimen/activity_horizontal_margin"
-    android:paddingRight="@dimen/activity_horizontal_margin"
-    android:paddingTop="@dimen/activity_vertical_margin"
     tools:context="eu.epitech.todolist.MainActivity">
 
     <include
@@ -29,16 +25,11 @@
         android:id="@+id/viewpager"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:layout_below="@+id/tabs">
-
-        <!--<ListView-->
-            <!--android:id="@+id/ListViewTasks"-->
-            <!--android:layout_height="wrap_content"-->
-            <!--android:layout_width="fill_parent"-->
-            <!--android:layout_alignTop="@+id/viewpager"-->
-            <!--android:layout_alignParentStart="true"-->
-            <!--android:layout_marginTop="30dp" />-->
-
+        android:layout_below="@+id/tabs"
+        android:paddingBottom="@dimen/activity_vertical_margin"
+        android:paddingLeft="@dimen/activity_horizontal_margin"
+        android:paddingRight="@dimen/activity_horizontal_margin"
+        android:paddingTop="@dimen/activity_vertical_margin">
     </android.support.v4.view.ViewPager>
 
 
