--- a/app/src/main/res/menu/main_menu.xml
+++ b/app/src/main/res/menu/main_menu.xml
@@ -1,12 +1,16 @@
 <?xml version="1.0" encoding="utf-8"?>
 <menu xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto">
-    <item
-        android:id="@+id/action_add_task"
-        android:icon="@android:drawable/ic_menu_add"
-        android:title="Add Task"
-        app:showAsAction="always" />
-
+    <group android:id="@+id/add">
+        <item
+            android:id="@+id/action_add_task"
+            android:icon="@drawable/ic_add_task_light"
+            android:title="@string/add_task"/>
+        <item
+            android:id="@+id/action_add_category"
+            android:icon="@drawable/ic_add_task_light"
+            android:title="@string/add_category"/>
+    </group>
 
     <it.neokree.materialtabs.MaterialTabHost
         android:id="@+id/materialTabHost"
