Removal of a category + modified change of category which no longer displays the current category

--- a/app/src/main/res/menu/main_menu.xml
+++ b/app/src/main/res/menu/main_menu.xml
@@ -10,6 +10,10 @@
             android:id="@+id/action_add_category"
             android:icon="@drawable/ic_add_task_light"
             android:title="@string/add_category"/>
+        <item
+            android:id="@+id/action_remove_category"
+            android:icon="@drawable/ic_add_task_light"
+            android:title="@string/remove_category"/>
     </group>
 
     <it.neokree.materialtabs.MaterialTabHost
