--- a/app/src/main/res/layout/custom_row_view.xml
+++ b/app/src/main/res/layout/custom_row_view.xml
@@ -15,7 +15,13 @@
         android:layout_height="wrap_content"
         android:maxLength="40"
         android:ellipsize="end"/>
+
     <TextView android:id="@+id/dueDate"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"/>
+
+    <TextView android:id="@+id/status"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:ellipsize="end"/>
 </LinearLayout>
